Closing Section Refinement: Deleted redundant Slide 24 and Updated Slide 25 KPIs to align with B2B Strategy (Risk/Quality/Education).

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -839,7 +839,7 @@
                     <div class="timeline-arrow">➞</div>
                     <!-- Phase 3 -->
                     <div class="timeline-phase">
-                        <div class="phase-header">Phase 3: Regional Scale (Mo 5-9)</div>
+                        <div class="phase-header">Phase 3: Regional Scale (Mo 5-12)</div>
                         <div class="phase-content">
                             <ul>
                                 <li><strong>Partner with Regional Chambers</strong></li>
@@ -853,60 +853,33 @@
             </div>
         </section>
 
-        <!-- Slide 24: Detailed Roadmap Breakdown -->
-        <section class="slide slide-alt">
-             <div class="animate-up">
-                <span class="tag tag-teal">Execution Details</span>
-                <h2>Detailed Execution Plan</h2>
-                 <div class="card">
-                    <table style="width: 100%; border-collapse: collapse; margin-top: 1rem;">
-                        <thead>
-                            <tr style="border-bottom: 2px solid #e63946;">
-                                <th style="text-align: left; padding: 1rem; color: #e63946;">Stream</th>
-                                <th style="text-align: left; padding: 1rem; color: #e63946;">Key Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr style="border-bottom: 1px solid #ddd;">
-                                <td style="padding: 1rem;"><strong>Content</strong></td>
-                                <td style="padding: 1rem;">Fix "Setup Guide" Hub UX • Refine "Experience" Landing Pages • Publish Wealth Series</td>
-                            </tr>
-                             <tr style="border-bottom: 1px solid #ddd;">
-                                <td style="padding: 1rem;"><strong>Technical</strong></td>
-                                <td style="padding: 1rem;">Resolve 404s • Defer Unused JS • Fix Schema • Optimize TTFB</td>
-                            </tr>
-                             <tr>
-                                <td style="padding: 1rem;"><strong>Off-Page</strong></td>
-                                <td style="padding: 1rem;">Tenant Badge Outreach • Quarterly Industry Reports • Local Map Optimization</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-             </div>
-        </section>
+
 
         <!-- SECTION 7: MEASUREMENT & GOVERNANCE -->
 
         <!-- Slide 25: KPIs -->
         <section class="slide slide-light">
            <div class="animate-up">
-                <span class="tag tag-teal">Measurement</span>
-                <h2>KPIs & Success Metrics</h2>
+                <span class="tag tag-teal">Success Metrics</span>
+                <h2>KPIs: Measuring "Real" Growth</h2>
                 <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
-                    <div class="card">
-                        <div class="metric-big" style="color: var(--primary-teal);">Visibility</div>
-                        <p><strong>Keyword Rankings</strong><br>#1 for "Fintech License Dubai" (Currently #5)</p>
-                        <p><strong>Share of Voice</strong><br>vs ADGM/DMCC</p>
+                    <!-- 1. Risk -->
+                    <div class="card" style="border-top: 5px solid #e63946;">
+                        <div class="metric-big" style="color: #e63946;">Risk</div>
+                        <p><strong>Toxic Link Reduction</strong><br>Goal: 27.8% → &lt;5%</p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Protect Domain Health.</p>
                     </div>
-                     <div class="card">
-                        <div class="metric-big" style="color: var(--gold);">Quality</div>
-                        <p><strong>Organic Traffic</strong><br>Non-branded Growth</p>
-                        <p><strong>Engagement</strong><br>Time on Site / Pages per Session</p>
+                    <!-- 2. Quality -->
+                    <div class="card" style="border-top: 5px solid var(--primary-teal);">
+                         <div class="metric-big" style="color: var(--primary-teal);">Quality</div>
+                        <p><strong>Regional Leads (KSA/Egypt)</strong><br>Goal: +50% YoY</p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">From Case Studies & Expansion Planner.</p>
                     </div>
-                    <div class="card">
-                         <div class="metric-big" style="color: #00324D;">Impact</div>
-                        <p><strong>Leads</strong><br>Enquiry Form Submits</p>
-                        <p><strong>Soft Conversions</strong><br>Downloads & Signups</p>
+                    <!-- 3. Education -->
+                    <div class="card" style="border-top: 5px solid var(--gold);">
+                         <div class="metric-big" style="color: var(--gold);">Education</div>
+                        <p><strong>"Time on Guide"</strong><br>Goal: &gt;3 Minutes</p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Prove users are consuming the "English Law" content.</p>
                     </div>
                 </div>
             </div>
