Final KPI Update: Aligned Slide 25 with User Request (Reduce Bounce Rate 63%->45%, Increase Engagement, Increase Leads).

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -863,23 +863,23 @@
                 <span class="tag tag-teal">Success Metrics</span>
                 <h2>KPIs: Measuring "Real" Growth</h2>
                 <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
-                    <!-- 1. Risk -->
+                    <!-- 1. Retention (Bounce Rate) -->
                     <div class="card" style="border-top: 5px solid #e63946;">
-                        <div class="metric-big" style="color: #e63946;">Risk</div>
-                        <p><strong>Toxic Link Reduction</strong><br>Goal: 27.8% → &lt;5%</p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Protect Domain Health.</p>
+                        <div class="metric-big" style="color: #e63946;">Retention</div>
+                        <p><strong>Reduce Bounce Rate</strong><br>Goal: 63% → 45%</p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Fix the "Shock": Convert traffic into readers.</p>
                     </div>
-                    <!-- 2. Quality -->
-                    <div class="card" style="border-top: 5px solid var(--primary-teal);">
-                         <div class="metric-big" style="color: var(--primary-teal);">Quality</div>
-                        <p><strong>Regional Leads (KSA/Egypt)</strong><br>Goal: +50% YoY</p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">From Case Studies & Expansion Planner.</p>
-                    </div>
-                    <!-- 3. Education -->
+                    <!-- 2. Engagement -->
                     <div class="card" style="border-top: 5px solid var(--gold);">
-                         <div class="metric-big" style="color: var(--gold);">Education</div>
-                        <p><strong>"Time on Guide"</strong><br>Goal: &gt;3 Minutes</p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Prove users are consuming the "English Law" content.</p>
+                         <div class="metric-big" style="color: var(--gold);">Engagement</div>
+                        <p><strong>Increase Time on Site</strong><br>Goal: &gt;3 Minutes</p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Prove users are consuming the "Education" content.</p>
+                    </div>
+                    <!-- 3. Impact (Leads) -->
+                    <div class="card" style="border-top: 5px solid var(--primary-teal);">
+                         <div class="metric-big" style="color: var(--primary-teal);">Growth</div>
+                        <p><strong>Increase Qualified Leads</strong><br>Goal: +50% from KSA/Egypt</p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Direct revenue from Expansion Planner.</p>
                     </div>
                 </div>
             </div>
