Final Polish: Aligned Closing Slides (27 & 28) with Final KPIs (>10 mins, Jordan/Africa) and Colors.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -866,19 +866,19 @@
                     <!-- 1. Retention (Bounce Rate) -->
                     <div class="card" style="border-top: 5px solid #e63946;">
                         <div class="metric-big" style="color: #e63946;">Retention</div>
-                        <p><strong>Reduce Bounce Rate</strong><br>Goal: 63% → 45%</p>
+                        <p><strong>Reduce Bounce Rate</strong><br>Goal: 63% → 25%</p>
                         <p style="font-size: 0.9rem; margin-top: 0.5rem;">Fix the "Shock": Convert traffic into readers.</p>
                     </div>
                     <!-- 2. Engagement -->
                     <div class="card" style="border-top: 5px solid var(--gold);">
                          <div class="metric-big" style="color: var(--gold);">Engagement</div>
-                        <p><strong>Increase Time on Site</strong><br>Goal: &gt;3 Minutes</p>
+                        <p><strong>Increase Time on Site</strong><br>Goal: &gt; 10 Minutes</p>
                         <p style="font-size: 0.9rem; margin-top: 0.5rem;">Prove users are consuming the "Education" content.</p>
                     </div>
                     <!-- 3. Impact (Leads) -->
                     <div class="card" style="border-top: 5px solid var(--primary-teal);">
                          <div class="metric-big" style="color: var(--primary-teal);">Growth</div>
-                        <p><strong>Increase Qualified Leads</strong><br>Goal: +50% from KSA/Egypt</p>
+                        <p><strong>Increase Qualified Leads</strong><br>Goal: +50% from KSA/Egypt/Jordan/Africa</p>
                         <p style="font-size: 0.9rem; margin-top: 0.5rem;">Direct revenue from Expansion Planner.</p>
                     </div>
                 </div>
@@ -914,45 +914,46 @@
         <!-- SECTION 8: CLOSING -->
 
         <!-- Slide 27: Summary -->
+        <!-- Slide 27: Strategy Summary -->
         <section class="slide slide-light">
              <div class="animate-up">
                 <span class="tag tag-teal">Wrap Up</span>
-                <h2>Improvement Opportunities Summary</h2>
+                <h2>The Strategy in a Nutshell</h2>
                 <div class="card-grid" style="grid-template-columns: repeat(4, 1fr);">
                     <div class="card" style="border-top: 4px solid #e63946;">
-                        <h3>1. Technical</h3>
-                        <p style="font-size: 0.9rem;">Fix Critical Errors & Speed</p>
+                        <h3>1. The Diagnosis</h3>
+                        <p style="font-size: 0.9rem;"><strong>"The Prestige Paradox"</strong><br>High Authority, but 63% Bounce.</p>
                     </div>
-                    <div class="card" style="border-top: 4px solid var(--primary-teal);">
-                        <h3>2. Content</h3>
-                        <p style="font-size: 0.9rem;">Launch Setup & Wealth Hubs</p>
+                    <div class="card" style="border-top: 4px solid #e63946;">
+                        <h3>2. The Risk</h3>
+                        <p style="font-size: 0.9rem;"><strong>"Health Emergency"</strong><br>27.8% Toxic Links (Action: Disavow).</p>
                     </div>
                      <div class="card" style="border-top: 4px solid var(--gold);">
-                        <h3>3. Journey</h3>
-                        <p style="font-size: 0.9rem;">Optimize "Above the Fold"</p>
+                        <h3>3. The Fix</h3>
+                        <p style="font-size: 0.9rem;"><strong>"The Knowledge Bridge"</strong><br>Goal: &gt;10 Mins Engagement.</p>
                     </div>
-                     <div class="card" style="border-top: 4px solid #00324D;">
-                        <h3>4. Authority</h3>
-                        <p style="font-size: 0.9rem;">Tenant Badges & Digital PR</p>
+                     <div class="card" style="border-top: 4px solid var(--primary-teal);">
+                        <h3>4. The Growth</h3>
+                        <p style="font-size: 0.9rem;"><strong>"The Real Economy"</strong><br>Scale into Jordan & Africa.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Slide 28: Closing Vision -->
+        <!-- Slide 28: Closing (The Vision) -->
         <section class="slide slide-hero">
             <div class="animate-up">
                 <span class="tag tag-gold">The Vision</span>
-                <h1>Securing the #1 Position</h1>
+                <h1>Capturing the "Real Economy"</h1>
                 <p class="summary-text" style="font-size: 1.5rem; max-width: 900px; margin-top: 2rem;">
-                    "By matching DIFC's world-class brand with a utility-first digital strategy, we will secure the #1 position for both Finance and Lifestyle in the region."
+                    "We stop fighting for the 'Crypto Bro'. We become the trusted launchpad for the 'Regional Trader' who scales to Saudi, Jordan, and Africa."
                 </p>
                 <div style="margin-top: 4rem;">
                     <h3>Immediate Next Steps</h3>
                     <ul style="justify-content: center; display: flex; gap: 2rem; list-style: none; padding: 0;">
-                        <li style="background: rgba(255,255,255,0.1); padding: 1rem 2rem; border-radius: 8px;">1. Approve Audit Fixes</li>
-                        <li style="background: rgba(255,255,255,0.1); padding: 1rem 2rem; border-radius: 8px;">2. Q1 Content Calendar</li>
-                        <li style="background: rgba(255,255,255,0.1); padding: 1rem 2rem; border-radius: 8px;">3. Start "Setup" Hub</li>
+                        <li style="background: rgba(255,255,255,0.1); padding: 1rem 2rem; border-radius: 8px;">1. Disavow Toxic Links</li>
+                        <li style="background: rgba(255,255,255,0.1); padding: 1rem 2rem; border-radius: 8px;">2. Launch "Knowledge" Hub</li>
+                        <li style="background: rgba(255,255,255,0.1); padding: 1rem 2rem; border-radius: 8px;">3. Deploy "Expansion Planner"</li>
                     </ul>
                 </div>
             </div>
