Refined Slide 13: Updated to Top-of-Funnel 'Awareness Gap' focusing on Value Prop, Proof, and Utility calculators.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -337,31 +337,7 @@
             </div>
         </section>
 
-        <!-- Slide 9: Prioritization -->
-        <section class="slide slide-alt">
-            <div class="animate-up">
-                <span class="tag tag-teal">Strategy</span>
-                <h2>Prioritization Framework</h2>
-                <div class="card-grid" style="grid-template-columns: repeat(2, 1fr);">
-                    <div class="card">
-                        <h3>Selection Criteria</h3>
-                        <ul style="margin-top: 1rem;">
-                            <li style="margin-bottom: 0.5rem;"><strong>1. Business Impact:</strong> Does it drive revenue?</li>
-                            <li style="margin-bottom: 0.5rem;"><strong>2. Search Demand:</strong> Is there significant volume?</li>
-                            <li style="margin-bottom: 0.5rem;"><strong>3. Current Position:</strong> "Striking Distance" wins first.</li>
-                        </ul>
-                    </div>
-                    <div class="card">
-                        <h3>Execution Phasing</h3>
-                        <div style="margin-top: 1rem;">
-                            <p><strong>Phase 1 (Mo 0-2):</strong> <span class="tag tag-gold">Quick Wins</span><br>Technical fixes & Friction Reduction.</p>
-                            <p style="margin-top: 1rem;"><strong>Phase 2 (Mo 2-5):</strong> <span class="tag tag-teal">Expansion</span><br>Engagement Tools (Calculators) & Lifestyle Hubs.</p>
-                            <p style="margin-top: 1rem;"><strong>Phase 3 (Mo 5-9):</strong> <span class="tag tag-teal">Domination</span><br>Global reach & competitive wins.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        
 
         <!-- SECTION 3: AUDIT & INSIGHTS -->
 
@@ -452,28 +428,28 @@
         <!-- Slide 13: UX & CRO (Consolidated) -->
         <section class="slide slide-alt">
             <div class="animate-up">
-                <span class="tag tag-teal">UX & Conversion</span>
-                <h2>Improving User Retention</h2>
+                <span class="tag tag-teal">Top of Funnel</span>
+                <h2>The Awareness Gap: Value Proposition</h2>
                 <div class="card-grid" style="grid-template-columns: repeat(2, 1fr);">
                     <div class="card">
-                        <h3>The Problem: "Low Motivation"</h3>
+                        <h3>The Problem: "No Awareness"</h3>
                         <ul style="margin-top: 1rem;">
-                            <li><span style="color: #e63946;">⚠</span> <strong>Friction:</strong> Users see "Enquire" and expect a sales call.</li>
-                            <li><span style="color: #e63946;">⚠</span> <strong>Generic CTA:</strong> "Enquire Now" is visible but not compelling.</li>
-                            <li><em>Insight:</em> Users want utility (costs), not a meeting.</li>
+                            <li><span style="color: #e63946;">⚠</span> <strong>No Value Proposition:</strong> Users don't know "What do I get?"</li>
+                            <li><span style="color: #e63946;">⚠</span> <strong>Missing Proof:</strong> No "Case Studies" to show real success.</li>
+                            <li><em>Result:</em> Users bounce because they see features, not solutions.</li>
                         </ul>
                     </div>
                     <div class="card">
-                        <h3>The Solution: "Value-Led CTA"</h3>
+                        <h3>The Solution: "Proof & Utility"</h3>
                         <ul style="margin-top: 1rem;">
-                            <li><strong>Change The Ask:</strong> Swap "Enquire" for <strong>"Get Cost Estimate"</strong>.</li>
-                            <li><strong>Reduce Friction:</strong> Simplify form to 3 essential fields.</li>
-                            <li><strong>Benefit-Driven H1s:</strong> "Launch Your Firm in Dubai's #1 Hub".</li>
+                            <li><strong>1. Case Studies:</strong> Show real "Importer" success stories.</li>
+                            <li><strong>2. Smart Calculators:</strong> "Expansion Planner" to show cost savings.</li>
+                            <li><strong>Benefit:</strong> Educate the user before asking for the sale.</li>
                         </ul>
                     </div>
                 </div>
                 <div class="card" style="margin-top: 2rem; background: var(--deep-navy); color: white; text-align: center;">
-                    <p style="font-size: 1.2rem;">"Stop selling 'Memberships'. Start solving <strong>Business Problems</strong>."</p>
+                    <p style="font-size: 1.2rem;">"We must bridge the gap between <strong>'Who We Are'</strong> and <strong>'What We Solve'</strong>."</p>
                 </div>
             </div>
         </section>
