Final User Polish: Updated Slide 14 Title to 'Prestige vs. Awareness' and cleaned up Slide 26 Risks.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -458,7 +458,7 @@
         <section class="slide slide-light">
             <div class="animate-up">
                 <span class="tag tag-teal">Funnel Strategy</span>
-                <h2>The Experience Gap: Prestige vs. Utility</h2>
+                <h2>The Experience Gap: Prestige vs. Awareness</h2>
                 
                 <div class="card-grid" style="grid-template-columns: repeat(2, 1fr); gap: 2rem;">
                     
@@ -880,7 +880,6 @@
                          <ul style="margin-top: 1rem;">
                             <li><strong>Regulatory Approval:</strong> Delays in publishing legal content.</li>
                             <li><strong>Dev Resource:</strong> Availability for technical fixes.</li>
-                             <li><strong>Mitigation:</strong> Pre-approved templates & dedicated dev slot.</li>
                         </ul>
                     </div>
                 </div>
