Refine Slide 8: Updated to 'Trust & Trade' Pillars (Legal Authority, Regional Relevance, Utility) vs Generic E-E-A-T.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -304,33 +304,33 @@
         <section class="slide slide-light">
             <div class="animate-up">
                 <span class="tag tag-teal">Methodology</span>
-                <h2>On-Page Strategy: E-E-A-T & Relevance</h2>
+                <h2>Content Pillars: Trust & Trade</h2>
                 <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
                     <!-- Authority -->
                     <div class="card">
-                        <h3>1. Topical Authority</h3>
-                        <p><strong>Goal:</strong> Establish DIFC as the definitive source for YMYL content.</p>
+                        <h3>1. Legal Authority</h3>
+                        <p><strong>Goal:</strong> Prove Protection (Riyadh Convention).</p>
                         <ul style="margin-top: 1rem;">
-                            <li><strong>Specialized Hubs:</strong> Web3, AI, Sustainable Finance.</li>
-                            <li><strong>Schema:</strong> <code>Authority</code> schema for authors.</li>
+                            <li><strong>Focus:</strong> "Enforcing Contracts in KSA".</li>
+                            <li><strong>Asset:</strong> Legal Explainer Hub.</li>
                         </ul>
                     </div>
-                    <!-- Freshness -->
+                    <!-- Relevance -->
                     <div class="card">
-                        <h3>2. Content Freshness</h3>
-                        <p><strong>Goal:</strong> Win the "Recency" signal for regulations.</p>
+                        <h3>2. Regional Relevance</h3>
+                        <p><strong>Goal:</strong> Prove Scale (Case Studies).</p>
                         <ul style="margin-top: 1rem;">
-                            <li><strong>Snippets:</strong> "Key Takeaways" on legal texts.</li>
-                            <li><strong>Newsroom:</strong> Frequent policy updates.</li>
+                            <li><strong>Focus:</strong> "Jordanian Importer Case Study".</li>
+                            <li><strong>Asset:</strong> Real Trader Stories.</li>
                         </ul>
                     </div>
-                    <!-- Localization -->
+                    <!-- Utility -->
                     <div class="card">
-                        <h3>3. Localized Long-Tail</h3>
-                        <p><strong>Goal:</strong> Capture converting traffic.</p>
+                        <h3>3. Conversion Utility</h3>
+                        <p><strong>Goal:</strong> Reduce Friction (Calculators).</p>
                         <ul style="margin-top: 1rem;">
-                            <li><strong>Focus:</strong> "Fintech license cost Dubai".</li>
-                            <li><strong>Impact:</strong> High conversion.</li>
+                            <li><strong>Focus:</strong> "Expansion Planner Tool".</li>
+                            <li><strong>Asset:</strong> Cost & Timeline Engine.</li>
                         </ul>
                     </div>
                 </div>
